working with Posts and done with add, delete and tier responsive

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -12,6 +12,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     /> 
+    <!--font awesome link-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -26,3 +28,5 @@
     crossorigin="anonymous"></script>
 </body>
 </html>
+
+{% comment %} Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere maiores cum molestias, pariatur perspiciatis perferendis voluptatem voluptates, error natus ipsam corporis temporibus quibusdam numquam repudiandae ea, assumenda laudantium ipsa animi vero qui magni! Quaerat odio iusto voluptates sed sit, eos, neque earum alias culpa accusamus error animi dicta veritatis corporis! Inventore iste ad placeat eos quos assumenda dicta incidunt pariatur quidem veniam rem laudantium quas vel, at architecto. Laudantium ab numquam quibusdam hic esse autem! Odio iste maiores voluptatem quaerat. {% endcomment %}
