--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -42,7 +42,7 @@
 {% else %}
     <div class="col-md-5 offset-md-3 mt-2 p-3">
     <h1>Login</h1>
-    <form method="POST" action="">
+    <form method="POST" action="" autocomplete="off">
         {% csrf_token %}
 
         <br>
