--- a/website/templates/register_user/register.html
+++ b/website/templates/register_user/register.html
@@ -4,7 +4,7 @@
 
     <div class="col-md-6 offset-md-2 p-3">
         <h1>Singup</h1>
-        <form method="post" action="">
+        <form method="post" action="" autocomplete="off">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="btn btn-secondary offset-md-5">Singup</button>
