i am done with post-reading, changin the model of add-post, changin login form design and fix some problems

--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -16,6 +16,9 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'add_post' %}">Add Post</a>
             </div>
             <div class="navbar-nav offset-md-0">
+                <a class="nav-link active" aria-current="page" href="/admin">Admin panel</a>
+            </div>
+            <div class="navbar-nav offset-md-0">
                 <a class="nav-link active" aria-current="page" href="{% url 'logout_user' %}">Logout</a>
             </div>
             <!--end admin navbar--> 
