--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 
 <!-- ========== Start admin ========== -->
@@ -40,30 +41,57 @@
 <!-- ========== End normal user ========== -->
 
 {% else %}
-    <div class="col-md-5 offset-md-3 mt-2 p-3">
-    <h1>Login</h1>
-    <form method="POST" action="" autocomplete="off">
-        {% csrf_token %}
-
-        <br>
-        <div class="mb-3">
-          <label for="" class="form-label"><strong>Username</strong></label>
-          <input type="text"
-            class="form-control" name="username" aria-describedby="helpId" placeholder="Enter your username" required>
+    <div class="container d-flex justify-content-center align-items-center min-vh-100 ">
+    <div class="row border rounded-5 p-3 bg-light shadow box-area" style="border-radius: 10px;">
+        <!--left container-->
+        <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background-color: #103cbe; border-radius: 10px;">
+            <div class="featured-image mb-3">
+                <img src="{% static 'images/bg.png' %}" class="img-fluid bg_img" width="390px">
+                
+            </div>
         </div>
-        <div class="mb-3 ">
-          <label for="" class="form-label"><strong>Password</strong></label>
-          <input type="password"
-            class="form-control" name="password" id="" aria-describedby="helpId" placeholder="*************" required>
+        <!--right container-->
+        <div class="col-md-6 right-box">
+            <div class="row  align-items-center ">
+                <div class="header-text mb-2">
+                    <h2>Hello,again</h2>
+                    <p>We are happy to have you back</p>
+                </div>
+                <form method="POST" action="" autocomplete="off">
+                    {% csrf_token %}
+                <div class="input-group mb-3">
+                    <input type="text" name="username" class="form-control form-control-lg bg-light fs-6" placeholder="Username" required>
+                </div>
+                <div class="input-group mb-1">
+                    <input type="password" name="password" class="form-control form-control-lg bg-light fs-6" placeholder="Password" required>
+                </div>
+                <div class="input-group mb-5 d-flex justify-content-between">
+                   <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="formCheck">
+                    <label for="formCheck" class="form-check-label text-secondary"><small>Remember me</small></label>
+                   </div>
+                   <div class="forgot">
+                    <a href="#"><small>Forgot Passowrd</small></a>
+                   </div>
+                </div>
+                <div class="input-group mb-3">
+                    <button type="submit" class="btn btn-lg btn-primary w-100 fs-6">Login</button>
+                </div>
+            
+                <div class="input-group mb-3">
+                    <button class="btn btn-lg btn-dark w-100 fs-6"><img src="{% static 'images/google.png' %}" style="width: 20px;" class="me-2"><small>Singin with google</small></button>
+                </div>
+
+                <div class="row">
+                    <small>Don't have an account?<a href="{% url 'singup' %}">Singup</a></small>
+                </div>
+            </form>
+            </div>
         </div>
+    </div>
+   </div>
 
-        <button  type="submit" class="btn btn-secondary offset-md-5">Login</button>
-        
-        <p class="offset-md-0 mt-3"><i> if you don`t have an account click here </i><a href="{% url 'singup' %}">Singup</a> <i> to register</i></p>
-    </form>
 
-    
-</div>
 {% endif %}
 
 {% endblock %}
