--- a/website/templates/posts/post.html
+++ b/website/templates/posts/post.html
@@ -8,7 +8,7 @@
     
     <div class="container mt-3">
     <div class="row gy-3">
-        {% for post in Posts %}
+        {% for post in posts %}
         
         <div class="col-lg-6 col-md-6 col-sm-6 col-12">
             <div class="card">
@@ -16,8 +16,8 @@
                 <div class="card-body">         
                     <h5 class="card-title"></h5>
                     <h5 href="" class="text-decoration-none link-dark">{{post.post_title}}</h5>
-                    <p class="card-text">{{post.content|truncatewords:5}}</p>
-                    <a href="{% url 'post_reading' %}"><button type="button" class="btn btn-secondary">Read</button></a>
+                    <p class="card-text">{{post.paragraph_one|truncatewords:5}}</p>
+                    <a href="{% url 'post_reading' post.slug %}"><button type="button" class="btn btn-secondary">Read</button></a>
                     <a href="#"><button type="button" class="btn btn-primary">Update</button></a>
                     <a href="{% url 'delete_post' post.id %}"><button type="button" class="btn btn-danger">Delete</button></a>
                     
@@ -25,7 +25,9 @@
                 </div>
             </div>
                
-            </div> 
+            </div>
+            {% empty %}
+            <h1>No more posts </h1>
              {% endfor %}
         </div>
     
@@ -35,7 +37,7 @@
 {% elif user.is_authenticated and user.is_staff %}
  <div class="container mt-3">
     <div class="row gy-4">
-        {% for post in Posts %}
+        {% for post in posts %}
         
             <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                 <div class="card">
@@ -44,8 +46,8 @@
                         
                         <h5 class="card-title"></h5>
                         <h5 href="" class="text-decoration-none link-dark">{{post.post_title}}</h5>
-                        <p class="card-text">{{post.content|truncatewords:5}}</p>
-                        <a href="{% url 'post_reading' %}"><button type="button" class="btn btn-secondary">Read more</button></a>
+                        <p class="card-text">{{post.paragraph_one|truncatewords:5}}</p>
+                        <a href="{% url 'post_reading' post.slug %}"><button type="button" class="btn btn-secondary">Read more</button></a>
                         <a href="#"><button type="button" class="btn btn-primary">Update</button></a>
                         <p class="mt-3"> <i class="fa fa-clock"></i> {{post.created_date}}</p>
                        
@@ -54,6 +56,8 @@
                 </div>
                
             </div> 
+            {% empty %}
+            <h1>No more posts </h1>
              {% endfor %}
         </div>
 <!-- ========== End staff ========== -->
@@ -62,7 +66,7 @@
 {% elif user.is_authenticated %}
  <div class="container mt-3">
     <div class="row gy-4">
-        {% for post in Posts %}
+        {% for post in posts %}
         
             <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                 <div class="card">
@@ -71,8 +75,8 @@
                         
                         <h5 class="card-title"></h5>
                         <h5 href="" class="text-decoration-none link-dark">{{post.post_title}}</h5>
-                        <p class="card-text">{{post.content|truncatewords:5}}</p>
-                        <a href="{% url 'post_reading' %}"><button type="button" class="btn btn-secondary">Read more</button></a>
+                        <p class="card-text">{{post.paragraph_one|truncatewords:5}}</p>
+                        <a href="{% url 'post_reading' post.slug%}"><button type="button" class="btn btn-secondary">Read more</button></a>
                         <p class="mt-3"> <i class="fa fa-clock"></i> {{post.created_date}}</p>
                        
                         
@@ -80,6 +84,8 @@
                 </div>
                
             </div> 
+            {% empty %}
+            <h1>No more posts </h1>
              {% endfor %}
         </div>
 <!-- ========== End normal user ========== -->
