--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,5 +1,5 @@
-{% comment %} {% extends 'base.html' %}
-{% block content %} {% endcomment %}
+{% extends 'base.html' %}
+{% block content %}
 <nav class="navbar navbar-expand-md navbar-dark bg-secondary">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'homePage' %}">User</a>
@@ -18,8 +18,8 @@
             <div class="navbar-nav offset-md-0">
                 <a class="nav-link active" aria-current="page" href="/admin">Admin panel</a>
             </div>
-            <div class="navbar-nav offset-md-0">
-                <a class="nav-link active" aria-current="page" href="{% url 'logout_user' %}">Logout</a>
+            <div class="navbar-nav offset-md-8">
+                <a class="nav-link active" aria-current="page" href="{% url 'logout_user' %}"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
             </div>
             <!--end admin navbar--> 
             
@@ -32,8 +32,8 @@
             <div class="navbar-nav offset-md-0">
                 <a class="nav-link active" aria-current="page" href="{% url 'add_post' %}">Add Post</a>
             </div>
-            <div class="navbar-nav offset-md-0">
-                <a class="nav-link active" aria-current="page" href="{% url 'logout_user' %}">Logout</a>
+            <div class="navbar-nav offset-md-9">
+                <a class="nav-link active" aria-current="page" href="{% url 'logout_user' %}"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
             </div>
             <!--end staff navbar-->
 
@@ -43,12 +43,12 @@
             <div class="navbar-nav offset-md-0">
                 <a class="nav-link active" aria-current="page" href="{% url 'postPage' %}">Posts</a>
             </div>
-            <div class="navbar-nav offset-md-0">
-                <a class="nav-link active" aria-current="page" href="{% url 'logout_user' %}">Logout</a>
+            <div class="navbar-nav offset-md-10">
+                <a class="nav-link active" aria-current="page" href="{% url 'logout_user' %}"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
             </div>
             <!--end normal user navbar-->   
             {% endif %}
             </div>
         </div>
     </nav>
-{% comment %} {% endblock %} {% endcomment %}
+{% endblock content %}
