--- a/website/templates/posts/post.html
+++ b/website/templates/posts/post.html
@@ -1,96 +1,199 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
 {% load static %}
-{% block content %}
+{% block content %} 
 {% include 'navbar.html' %}
 
 <!-- ========== Start admin ========== -->
 {% if user.is_authenticated and user.is_superuser and user.is_staff %}
-    
-    <div class="container mt-3">
-    <div class="row gy-3">
-        {% for post in posts %}
-        
-        <div class="col-lg-6 col-md-6 col-sm-6 col-12">
-            <div class="card">
-                <img src="{{ post.image }}" class="card-img-top">
-                <div class="card-body">         
-                    <h5 class="card-title"></h5>
-                    <h5 href="" class="text-decoration-none link-dark">{{post.post_title}}</h5>
-                    <p class="card-text">{{post.paragraph_one|truncatewords:5}}</p>
-                    <a href="{% url 'post_reading' post.slug %}"><button type="button" class="btn btn-secondary">Read</button></a>
-                    <a href="#"><button type="button" class="btn btn-primary">Update</button></a>
-                    <a href="{% url 'delete_post' post.id %}"><button type="button" class="btn btn-danger">Delete</button></a>
-                    
-                    <p class="mt-3"> <i class="fa fa-clock"></i> {{post.created_date}}</p>
-                </div>
+
+<!--The card-->
+<div class="container-fluid mt-4 mb-3">
+  <div class="row">
+    {% for post in posts %}
+    <div class="col-md-6 col-lg-4">
+      <div class="card p-3 mb-4">
+        <div class="d-flex justify-content-between">
+          <div class="d-flex flex-row align-items-center">
+            <div class="icon"><img src="{{ post.image }}" /></div>
+            <div class="ms-2 c-details">
+              <h6 class="mb-0"><strong>{{post.post_title}}</strong></h6>
+              <span>published {{post.created_date}}</span>
             </div>
-               
-            </div>
-            {% empty %}
-            <h1>No more posts </h1>
-             {% endfor %}
+          </div>
+          <div class="badge">
+            <span class="span-1">
+              <div class="badge">
+                <span data-bs-toggle="modal" data-bs-target="#exampleModal"
+                  >Manage</span
+                >
+              </div>
+            </span>
+          </div>
         </div>
-    
+        <div class="mt-3">
+          <h3 class="heading">{{post.paragraph_one|truncatewords:5}}</h3>
+          <div class="mt-5">
+            <a href="{% url 'post_reading' post.slug %}"
+              ><button class="btn btn-dark w-100">Read more</button></a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--the modal-->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Manage this Post</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+
+          <div class="modal-footer">
+            <a href="{% url 'delete_post' post.id %}"
+              ><button type="button" class="btn btn-danger">
+                <i class="fa-solid fa-trash-can"></i> Delete
+              </button></a
+            >
+
+            <a href="#"
+              ><button type="button" class="btn btn-secondary">
+                <i class="fa-solid fa-pen"></i> Update
+              </button></a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    {% empty %}
+    <h1>No more posts</h1>
+    {% endfor %}
+  </div>
+</div>
+
 <!-- ========== End admin ========== -->
 
 <!-- ========== Start staff ========== -->
 {% elif user.is_authenticated and user.is_staff %}
- <div class="container mt-3">
-    <div class="row gy-4">
-        {% for post in posts %}
-        
-            <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                <div class="card">
-                    <a href="#"><img src="{{ post.image }}" class="card-img-top"></a>
-                    <div class="card-body">
-                        
-                        <h5 class="card-title"></h5>
-                        <h5 href="" class="text-decoration-none link-dark">{{post.post_title}}</h5>
-                        <p class="card-text">{{post.paragraph_one|truncatewords:5}}</p>
-                        <a href="{% url 'post_reading' post.slug %}"><button type="button" class="btn btn-secondary">Read more</button></a>
-                        <a href="#"><button type="button" class="btn btn-primary">Update</button></a>
-                        <p class="mt-3"> <i class="fa fa-clock"></i> {{post.created_date}}</p>
-                       
-                        
-                    </div>
-                </div>
-               
-            </div> 
-            {% empty %}
-            <h1>No more posts </h1>
-             {% endfor %}
+
+<!--the card-->
+<div class="container-fluid mt-4 mb-3">
+  <div class="row">
+    {% for post in posts %}
+    <div class="col-md-6 col-lg-4">
+      <div class="card p-3 mb-4">
+        <div class="d-flex justify-content-between">
+          <div class="d-flex flex-row align-items-center">
+            <div class="icon"><img src="{{ post.image }}" /></div>
+            <div class="ms-2 c-details">
+              <h6 class="mb-0"><strong>{{post.post_title}}</strong></h6>
+              <span>published {{post.created_date}}</span>
+            </div>
+          </div>
+          <div class="badge">
+            <span class="span-1">
+              <div class="badge">
+                <span data-bs-toggle="modal" data-bs-target="#exampleModal"
+                  >Manage</span
+                >
+              </div>
+            </span>
+          </div>
         </div>
+        <div class="mt-3">
+          <h3 class="heading">{{post.paragraph_one|truncatewords:5}}</h3>
+          <div class="mt-5">
+            <a href="{% url 'post_reading' post.slug %}"
+              ><button class="btn btn-dark w-100">Read more</button></a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--the modal-->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Manage this Post</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+
+          <div class="modal-footer">
+            <a href="#"
+              ><button type="button" class="btn btn-secondary">
+                <i class="fa-solid fa-pen"></i>Update
+              </button></a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    {% empty %}
+    <h1>No more posts</h1>
+    {% endfor %}
+  </div>
+</div>
+
 <!-- ========== End staff ========== -->
 
 <!-- ========== Start normal user ========== -->
 {% elif user.is_authenticated %}
- <div class="container mt-3">
-    <div class="row gy-4">
-        {% for post in posts %}
-        
-            <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                <div class="card">
-                    <img src="{{ post.image }}" class="card-img-top">
-                    <div class="card-body">
-                        
-                        <h5 class="card-title"></h5>
-                        <h5 href="" class="text-decoration-none link-dark">{{post.post_title}}</h5>
-                        <p class="card-text">{{post.paragraph_one|truncatewords:5}}</p>
-                        <a href="{% url 'post_reading' post.slug%}"><button type="button" class="btn btn-secondary">Read more</button></a>
-                        <p class="mt-3"> <i class="fa fa-clock"></i> {{post.created_date}}</p>
-                       
-                        
-                    </div>
-                </div>
-               
-            </div> 
-            {% empty %}
-            <h1>No more posts </h1>
-             {% endfor %}
+<!--the card-->
+<div class="container-fluid mt-4 mb-3">
+  <div class="row">
+    {% for post in posts %}
+    <div class="col-md-6 col-lg-4">
+      <div class="card p-3 mb-4">
+        <div class="d-flex justify-content-between">
+          <div class="d-flex flex-row align-items-center">
+            <div class="icon"><img src="{{ post.image }}" /></div>
+            <div class="ms-2 c-details">
+              <h6 class="mb-0"><strong>{{post.post_title}}</strong></h6>
+              <span>published {{post.created_date}}</span>
+            </div>
+          </div>
         </div>
+        <div class="mt-3">
+          <h3 class="heading">{{post.paragraph_one|truncatewords:5}}</h3>
+          <div class="mt-5">
+            <a href="{% url 'post_reading' post.slug %}"
+              ><button class="btn btn-dark w-100">Read more</button></a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+
+    {% empty %}
+    <h1>No more posts</h1>
+    {% endfor %}
+  </div>
+</div>
+
 <!-- ========== End normal user ========== -->
-{% endif %}
-
-
-
-{% endblock %}
+{% endif %} {% endblock %} 
