--- a/website/templates/posts/post.html
+++ b/website/templates/posts/post.html
@@ -33,7 +33,7 @@
         <div class="mt-3">
           <h3 class="heading">{{post.paragraph_one|truncatewords:5}}</h3>
           <div class="mt-5">
-            <a href="{% url 'post_reading' post.slug %}"
+            <a href="#"
               ><button class="btn btn-dark w-100">Read more</button></a
             >
           </div>
@@ -68,7 +68,7 @@
               </button></a
             >
 
-            <a href="#"
+            <a href="{% url 'update_post' %}"
               ><button type="button" class="btn btn-secondary">
                 <i class="fa-solid fa-pen"></i> Update
               </button></a
@@ -115,7 +115,7 @@
         <div class="mt-3">
           <h3 class="heading">{{post.paragraph_one|truncatewords:5}}</h3>
           <div class="mt-5">
-            <a href="{% url 'post_reading' post.slug %}"
+            <a href="#"
               ><button class="btn btn-dark w-100">Read more</button></a
             >
           </div>
@@ -181,7 +181,7 @@
         <div class="mt-3">
           <h3 class="heading">{{post.paragraph_one|truncatewords:5}}</h3>
           <div class="mt-5">
-            <a href="{% url 'post_reading' post.slug %}"
+            <a href="#"
               ><button class="btn btn-dark w-100">Read more</button></a
             >
           </div>
