--- a/website/templates/posts/update-post.html
+++ b/website/templates/posts/update-post.html
@@ -1,1 +1,59 @@
-<h1>working</h1>
+{% extends 'base.html' %} 
+{% load static %}
+{% block content %} 
+{% include 'navbar.html' %}
+
+
+<div class="container mt-4">
+    <form action="">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2">
+        <div class="col">
+            <label for="" class="form-label">Post title*</label>
+            <input type="text" name="" class="form-control" required> 
+        </div>
+        <div class="col">
+            <label for="" class="form-label">slug*</label>
+            <input type="text" name="" class="form-control" required>
+        </div>
+        <div class="col">
+            <label for="" class="form-label">Heading*</label>
+            <input type="text" name="" class="form-control" required> 
+        </div>
+        <div class="col">
+            <label for="" class="form-label">Paragraph one*</label>
+            <input type="text" name="" class="form-control" required>
+        </div>
+        <div class="col">
+            <label for="" class="form-label">Paragraph two*</label>
+            <input type="text" name="" class="form-control" required>
+        </div>
+        <div class="col">
+            <label for="" class="form-label">Paragraph three*</label>
+            <input type="text" name="" class="form-control">
+        </div>
+        <div class="col">
+            <label for="" class="form-label">Paragraph four*</label>
+            <input type="text" name="" class="form-control">
+        </div>
+        <div class="col">
+            <div class="row">
+                <div class="col">
+                    <label for="" class="form-label">Image url*</label>
+                    <input type="text" name="" class="form-control" required>
+                </div>
+                <div class="col">
+                    <label for="" class="form-label">Author*</label>
+                    <input type="text" name="" class="form-control" required>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button type="submit" class="btn btn-primary w-100 mt-4 ">Update the post</button>
+</form>
+</div> 
+
+
+
+
+
+{% endblock %}
