--- a/website/templates/posts/post_reading.html
+++ b/website/templates/posts/post_reading.html
@@ -1,14 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
+
 {% block content %}
 
 
 <img src="{{post.image}}" alt="" width="1200" height="550">
 <h1>{{post.post_title}}</h1>
-<p>{{post.paragraph_one}}</p>
-<p>{{post.paragraph_two}}</p>
-<p>{{post.paragraph_three}}</p>
-<p>{{post.paragraph_four}}</p>
+<p>{{ post.body|safe }}</p>
 <p>publish at {{post.created_date}}</p>
 <p>author : {{post.creater}}</p>
 
