--- a/website/templates/register_user/register.html
+++ b/website/templates/register_user/register.html
@@ -2,14 +2,74 @@
 {% block content %}
 
 
-    <div class="col-md-6 offset-md-2 p-3">
+    {% comment %}<div class="col-md-6 offset-md-2 p-3">
         <h1>Singup</h1>
-        <form method="post" action="" autocomplete="off">
+         <form method="post" action="" autocomplete="off">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="btn btn-secondary offset-md-5">Singup</button>
             <p>I have already an account <a href="{% url 'homePage' %}">Login</a></p>
-        </form>
+        </form> 
+        </div>{% endcomment %}
+        <form method="post">
+  {% csrf_token %}
+  <div class="container-fluid mt-3">
+    <h1 class="offset-md-5 mb-3">Sing up</h1>
+  <div class="row row-cols-sm-1 row-cols-md-">
+    <div class="col-md-6 mb-4">
+      <div class="input-group">
+        <div class="input-group-text bg-dark text-white"><i class="fa-solid fa-user"></i></div>
+        {{ form.username.label_tag }}
+        {{ form.username }}
+      </div>
+    </div>
+    <div class="col-md-6 mb-4">
+      <div class="input-group">
+        <div class="input-group-text bg-dark text-white"><i class="fa-solid fa-font"></i></div>
+        {{ form.first_name.label_tag }}
+        {{ form.first_name }}
+      </div>
+    </div>
+    <div class="col-md-6 mb-4">
+      <div class="input-group">
+        <div class="input-group-text bg-dark text-white"><i class="fa-solid fa-font"></i></div>
+        {{ form.last_name.label_tag }}
+        {{ form.last_name }}
+      </div>
+    </div>
+  
+
+
+    <div class="col-md-6 mb-4">
+      <div class="input-group ">
+        <div class="input-group-text bg-dark text-white"><i class="fa-solid fa-envelope"></i></div>
+        {{ form.email.label_tag }}
+        {{ form.email }}
+      </div>
+    </div>
+    
+
+
+
+    <div class="col-md-6 mb-4">
+      <div class="input-group">
+        <div class="input-group-text bg-dark text-white"><i class="fa-solid fa-lock"></i></div>
+        {{ form.password1.label_tag }}
+        {{ form.password1 }}
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="input-group">
+        <div class="input-group-text bg-dark text-white"><i class="fa-solid fa-lock"></i></div>
+        {{ form.password2.label_tag }}
+        {{ form.password2 }}
+      </div>
+    </div>
+</div>
+
+  <button type="submit" class="btn btn-primary w-100 mt-4 btn-lg bg-dark text-white">Sign Up</button>
+  <p class="mt-3 offset-md-5">I have already an account <a href="{% url 'homePage' %}">Login</a></p>
+</form>
     </div>
 
 
