--- a/website/templates/users/admin.html
+++ b/website/templates/users/admin.html
@@ -1,1 +1,42 @@
-<h1>i am admin</h1>
+
+    <style>
+        .containers {
+            position: absolute;
+            margin-left: 80px;
+        }
+        .top {
+            margin-top: 100px;
+        }
+        .p1 {
+            font-size: 20px;
+            background-color: black;
+            border-radius: 20px;
+            width: 280px;
+            padding: 10px 15px;
+            color: white;
+            cursor: pointer;
+
+        }
+        .p2 {
+            margin-left: 30px;
+            font-size: 18px;
+            background-color: darkgray;
+            border-radius: 20px;
+            width: 280px;
+            padding: 8px 12px;
+            color: black;
+            cursor: pointer;
+        }
+    </style>
+
+
+<div class="containers">
+    <div class="top">
+        <h1>Hi admin</h1>
+        <p class="p1">You have this <span>permissions</span></p>
+        <p class="p2">1: Your able to add a new post.</p>
+        <p class="p2">2: Your able to update a post.</p>
+        <p class="p2">3: your able to delete a post</p>
+
+    </div>
+</div>
