--- a/website/templates/users/user.html
+++ b/website/templates/users/user.html
@@ -1,7 +1,39 @@
-{% load static %}
+
+<style>
+    .containers {
+        position: absolute;
+        margin-left: 80px;
+    }
+    .top {
+        margin-top: 100px;
+    }
+    .p1 {
+        font-size: 20px;
+        background-color: black;
+        border-radius: 20px;
+        width: 300px;
+        padding: 10px 15px;
+        color: white;
+        cursor: pointer;
+
+    }
+    .p2 {
+        margin-left: 30px;
+        font-size: 18px;
+        background-color: darkgray;
+        border-radius: 20px;
+        width: 290px;
+        padding: 8px 12px;
+        color: black;
+        cursor: pointer;
+    }
+</style>
 
 
+<div class="containers">
+<div class="top">
+    <h1>Hi user</h1>
+    <p class="p1">we are very happy to join us.<br>click the posts in the menu section to see our help full posts.<br> Thanks you!</p>
 
-<div class="container">
-
+</div>
 </div>
