--- a/website/templates/posts/post.html
+++ b/website/templates/posts/post.html
@@ -92,7 +92,7 @@
 
 
 <!-- ========== Start admin ========== -->
-{% if user.is_authenticated and user.is_superuser and user.is_staff %}
+{% if user.is_authenticated and user.is_superuser %}
 
 <!--The card-->
 <div class="container-fluid mt-4 mb-3">
