--- a/website/templates/posts/post_reading.html
+++ b/website/templates/posts/post_reading.html
@@ -150,7 +150,7 @@
             <div class="col-md-6 px-0">
                 <h1 class="display-4 font-italic">{{post.post_title}}</h1>
                 <p class="lead my-3">publish at {{post.created_date}}</p>
-                <p class="lead mb-0">Author is {{post.creater}}</p>
+                <p class="lead mb-0">Author is {{post.creater}}</p> 
             </div>
         </div>
     
@@ -201,7 +201,7 @@
     </main><!-- /.container -->
     
     <footer class="blog-footer">
-        <p>Copyright recived </p>
+        <p>xudayfi 2024 </p>
     </footer>
 
 
