--- a/website/templates/users/admin.html
+++ b/website/templates/users/admin.html
@@ -37,6 +37,7 @@
         <p class="p2">1: Your able to add a new post.</p>
         <p class="p2">2: Your able to update a post.</p>
         <p class="p2">3: your able to delete a post</p>
+        <p class="p2">3: your able to see unpublished post</p>
 
     </div>
 </div>
